STARTING TO WORK

--- a/lyricrecorder/src/main/webapp/index.html
+++ b/lyricrecorder/src/main/webapp/index.html
@@ -2,13 +2,215 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>LyricRecorder</title>
+<link rel="shortcut icon" href="">
+<title>lyricrecorder.com</title>
+<link rel="stylesheet" href="css/page.css" media="screen" />
+<link rel="stylesheet" href="css/fileUpload.css" media="screen" />
+<link rel="stylesheet" href="css/buttons.css" media="screen" />
+<link rel="stylesheet" href="css/lyrics.css" media="screen" />
+<link rel="stylesheet" href="css/video/video.css" media="screen" />
+
+
+<script src="./javascript/external/jquery/jquery-3.1.0.min.js"
+	type="text/javascript"></script>
+<script src="./javascript/external/jquery/jquery-json.js"
+	type="text/javascript"></script>
+
+
+<script src="./javascript/external/fileSaver/FileSaver.min.js"
+	type="text/javascript"></script>
+
+
+<script src="./javascript/application/events.js" type="text/javascript"></script>
+<script src="./javascript/application/main.js" type="text/javascript"></script>
+<script src="./javascript/application/FileUploader.js"
+	type="text/javascript"></script>
+<script src="./javascript/application/LyricTracker.js"
+	type="text/javascript"></script>
+<script src="./javascript/application/TextTracker.js"
+	type="text/javascript"></script>
+<script src="./javascript/application/pageControls.js"
+	type="text/javascript"></script>
+<script src="./javascript/application/words.js" type="text/javascript"></script>
+<script src="./javascript/application/AjaxCalls.js"
+	type="text/javascript"></script>
+
+
+<script src="./javascript/application/video/animation2.js"
+	type="text/javascript"></script>
+<script src="./javascript/application/video/parameters.js"
+	type="text/javascript"></script>
+
+<script src="./javascript/application/video/easing.js"
+	type="text/javascript"></script>
+
+
+<script type="text/javascript" charset="utf-8"
+	src="./javascript/external/visualisation/AudioVisualisation.js"></script>
+<script type="text/javascript" charset="utf-8"
+	src="./javascript/external/visualisation/Common.js"></script>
+<script type="text/javascript" charset="utf-8"
+	src="./javascript/external/visualisation/FFTNR.js"></script>
+<script type="text/javascript" charset="utf-8"
+	src="./javascript/external/visualisation/GraphicalFilterEditor.js"></script>
+<script type="text/javascript" charset="utf-8"
+	src="./javascript/external/visualisation/GraphicalFilterEditorControl.js"></script>
+
+<script type="text/javascript" charset="utf-8"
+	src="./javascript/external/visualisation/Program.js"></script>
+<script type="text/javascript" charset="utf-8"
+	src="./javascript/external/visualisation/SoundParticles.js"></script>
+
 </head>
 <body>
+	<div id="headerContainer">
+		<div id="headerTitle">
+			<span id="headerText">LyricRecorder.com</span>
 
-	<div>
-		<h1>Test Page1</h1>
+		</div>
 	</div>
+	<div id="mainContainer">
+		<div id="trackDetails">
+			<table id="tracks">
+				<tr>
+					<th>Title</th>
+					<th>Artist</th>
+					<th>Album</th>
+				</tr>
+				<tr>
+					<td width="33%" height="15px;"><span id="trackTitle">&nbsp;</span></td>
+					<td width="33%" height="15px;"><span id="trackArtist">&nbsp;</span></td>
+					<td width="33%" height="15px;"><span id="trackAlbum">&nbsp;</span></td>
+				</tr>
+			</table>
+		</div>
+		<div style="position: relative; width: 0; height: 0">
+			<div id="canvasContainerBackground">&nbsp;</div>
+		</div>
+		<div>
+			<div id="canvasContainer"></div>
+			<audio src="" id="audio">
+			</audio>
+		</div>
+		<div class="controlButtonsContainer">
+			<div class="buttonType1ContainerSmall">
+				<a href="#" class="buttonType1" id="skipBack5Button">-5</a>
+			</div>
+			<div class="buttonType1ContainerSmall">
+				<a href="#" class="buttonType1" id="playSlowButton">Slow</a>
+			</div>
+			<div class="buttonType1ContainerMedium">
+				<a href="#" class="buttonType1" id="playPauseButton">Play</a>
+			</div>
+			<div class="buttonType1ContainerSmall">
+				<a href="#" class="buttonType1" id="playFastButton">Fast</a>
+			</div>
+			<div class="buttonType1ContainerSmall">
+				<a href="#" class="buttonType1" id="skipForward5Button">+5</a>
+			</div>
 
+			<div class="buttonType1ContainerSmall">
+				<a href="#" class="buttonType1" id="mute">Mute</a>
+			</div>
+		</div>
+
+		<div style="position: relative; width: 0; height: 0">
+			<div id="uploadButton">
+				<div class="buttonType1ContainerLarge1">
+					<a href="#" class="buttonType1 viewTabs" id="enableUploadView">1.
+						Upload</a>
+				</div>
+			</div>
+		</div>
+		<div style="position: relative; width: 0; height: 0">
+			<div id="editButton">
+				<div class="buttonType1ContainerLarge1">
+					<a href="#" class="buttonType1 viewTabs buttonUnselected"
+						id="enableTextView">2. Enter Lyrics</a>
+				</div>
+			</div>
+		</div>
+		<div style="position: relative; width: 0; height: 0">
+			<div id="recordButton">
+				<div class="buttonType1ContainerLarge1">
+					<a href="#" class="buttonType1 viewTabs buttonUnselected"
+						id="enableWordView">3. Sync Lyrics</a>
+				</div>
+			</div>
+		</div>
+		<div style="position: relative; width: 0; height: 0">
+			<div id="videoButton">
+				<div class="buttonType1ContainerLarge1">
+					<a href="#" class="buttonType1 viewTabs buttonUnselected"
+						id="enableVideoView">4. Video</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="viewContainer" id="videoControls" style="display: none"></div>
+
+		<div id="lyricsContainer">
+			<textarea class="viewContainer" id="lyricText" style="display: none"></textarea>
+			<div class="viewContainer" id="lyrics" style="display: none"></div>
+
+			<div class="viewContainer" id="videoControls" style="display: none"></div>
+
+			<div class="viewContainer" id="video" style="display: none">
+				<object id="svgImage" type="image/svg+xml" data="./svg/Smiley.svg"></object>
+
+				<div id="backgroundImageContainerContainer">
+					<div id="backgroundImageContainer"></div>
+				</div>
+				<canvas id="videoCanvas" width="800" height="600"></canvas>
+				<canvas id="word1Canvas" width="800" height="600"></canvas>
+				<canvas id="word2Canvas" width="800" height="600"></canvas>
+			</div>
+
+			<div class="viewContainer" id="fileUploadHolder">
+				<p class="holderMessage">Drag an audio file here to begin.
+					Maximum file size 15 Mb. Supported formats include: mp3, wav, wma,
+					m4a, mid, flac, mov, amr, aac, au, aif, raw, dvf, vox, cda</p>
+			</div>
+		</div>
+		<div id="wordButtonContainer" class="controlButtonsContainer"
+			style="display: none">
+			<div class="buttonType1ContainerLarge">
+				<a href="#" class="buttonType1" id="removePreviousWord">Remove</a>
+			</div>
+			<div class="buttonType1ContainerLarge">
+				<a href="#" class="buttonType1" id="addCurrentWord">Add Word</a>
+			</div>
+			<div class="buttonType1ContainerSmall">
+				<a href="#" class="buttonType1" id="save">Save</a>
+			</div>
+			<div class="buttonType1ContainerSmall">
+				<a href="#" class="buttonType1" id="generateVideo">Video</a>
+			</div>
+		</div>
+		<div id="downloadableLink"></div>
+
+	</div>
+	<div id="analyzerPlaceholder"></div>
+
+
+
+	<script>
+		
+		
+		var mySVG = document.getElementById("svgImage");
+		var svgDoc;
+		var circ;
+		mySVG.addEventListener("load", function() {
+			circ = $('#svgImage');
+			circ.css({
+				'position' : 'absolute',
+				'width' : '100px',
+				'height' : '100px',
+				'left' : '0px',
+				'top' : '0px'
+			})
+
+		}, false);
+	</script>
 </body>
 </html>
