--- a/lyricrecorder/src/main/webapp/index.html
+++ b/lyricrecorder/src/main/webapp/index.html
@@ -36,14 +36,14 @@
 	type="text/javascript"></script>
 
 
-<script src="./javascript/application/video/animation2.js"
+<!-- <script src="./javascript/application/video/animation2.js"
 	type="text/javascript"></script>
 <script src="./javascript/application/video/parameters.js"
 	type="text/javascript"></script>
 
 <script src="./javascript/application/video/easing.js"
 	type="text/javascript"></script>
-
+ -->
 
 <script type="text/javascript" charset="utf-8"
 	src="./javascript/external/visualisation/AudioVisualisation.js"></script>
