--- a/lyricrecorder/src/main/webapp/index.html
+++ b/lyricrecorder/src/main/webapp/index.html
@@ -15,7 +15,9 @@
 	type="text/javascript"></script>
 <script src="./javascript/external/jquery/jquery-json.js"
 	type="text/javascript"></script>
-
+	
+<script src="./javascript/external/jszip/jszip.min.js"
+	type="text/javascript"></script>
 
 <script src="./javascript/external/fileSaver/FileSaver.min.js"
 	type="text/javascript"></script>
@@ -27,8 +29,7 @@
 	type="text/javascript"></script>
 <script src="./javascript/application/LyricTracker.js"
 	type="text/javascript"></script>
-<script src="./javascript/application/TextTracker.js"
-	type="text/javascript"></script>
+
 <script src="./javascript/application/pageControls.js"
 	type="text/javascript"></script>
 <script src="./javascript/application/words.js" type="text/javascript"></script>
